[gd_scene load_steps=4 format=3 uid="uid://xkg3ucnitsra"]

[ext_resource type="PackedScene" uid="uid://dux0gd0slf1l5" path="res://cars/wheel.tscn" id="1_41m3k"]
[ext_resource type="Script" path="res://cars/car.gd" id="1_88aey"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ldm1"]
radius = 35.0
height = 116.0

[node name="Car" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_88aey")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_4ldm1")

[node name="Wheels" type="Node2D" parent="."]

[node name="FrontLeft" parent="Wheels" instance=ExtResource("1_41m3k")]
position = Vector2(40, 30)

[node name="FrontRight" parent="Wheels" instance=ExtResource("1_41m3k")]
position = Vector2(-40, 30)

[node name="RearLeft" parent="Wheels" instance=ExtResource("1_41m3k")]
position = Vector2(40, -36)

[node name="RearRight" parent="Wheels" instance=ExtResource("1_41m3k")]
position = Vector2(-40, -36)

[node name="Sprite2D" type="Sprite2D" parent="Wheels"]
scale = Vector2(2, 2)

[node name="Camera2D" type="Camera2D" parent="."]
